--- a/website.html
+++ b/website.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" type="text/css" href="style2.css" />
     <div id="container">
         <div id="header">
-            <h1>Rodney's Project Webpage</h1>
+            <h1>Creating a Website</h1>
         </div>
         <div id="content">
             <div id="nav">
@@ -14,12 +14,18 @@
                 </ul>
             </div>
             <div id="main">
-                <h2>My Projects</h2>
-                <p>Here are all the projects that I have done</p>
-                <ul>
-                    <li><a href="website.html">Creating a Website</a></li>
-                </ul>
-        
+                <h2>Creating A Websie</h2>
+                <p>A Simple way of creaing a website</p>
+                <ol>
+                    <li>Write an index.html file</li>
+                    <li>Create a github / git pages account</li>
+                    <li>Create a repository</li>
+                    <li>Clone/populate site</li>
+                    <li>Commit to main</li>
+                    <li>Push to repository</li>
+
+                </ol>
+
             </div>
 
         </div>
